app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p4nh4-react-app-svc
spec:
  selector:
    app: p4nh4-react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
